Mon Jun 18 21:41:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/branchpostlist.h: Add missed copyright statement.

Mon Jun 18 21:36:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/branchpostlist.cc,matcher/branchpostlist.h: Add get_wdf()
	  method to BranchPostList (which just sums the wdf, which is
	  useful for a synonym postlist, which is the only situation in
	  which this will be called).  Add the method definition in a
	  separate file, as per the comment I just added to HACKING.
	* matcher/Makefile.mk: Add branchpostlist.cc

Mon Jun 18 21:33:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Add note about virtual methods (saying that the
	  shouldn't be defined in header files).

Mon Jun 18 20:15:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/phrasepostlist.cc,matcher/phrasepostlist.h,
	  matcher/exactphrasepostlist.cc,matcher/exactphrasepostlist.cc:
	  Add get_wdf() methods to NearPostList, PhrasePostList and
	  ExactPhrasePostList - these use a very rough approximation (but
	  there's a big long comment justifying it).

Mon Jun 18 18:38:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/mergepostlist.cc,matcher/mergepostlist.h: Add copyright
	  statements for previous commit (and update license while I'm at
	  it).

Mon Jun 18 18:24:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/mergepostlist.cc,matcher/mergepostlist.h: Add get_wdf()
	  method to MergePostList (just passes through the value from the
	  current postlist).  Not currently needed, but the expected
	  behaviour is obvious, and this will be needed if there's a
	  synonym postlist higher in the query tree (when synonym postlists
	  are implemented).  Also, correct a documentation comment typo.

Mon Jun 18 13:09:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/valuerangeproc.cc: Cast the first parameter to ldexp() to