@@ -1,3 +1,9 @@
+Tue Jun 19 12:35:46 BST 2007  Olly Betts <olly@survex.com>
+
+	* matcher/branchpostlist.cc: Add missing #include <config.h>.
+	* matcher/branchpostlist.cc,matcher/branchpostlist.h: Move other
+	  virtual method definitions out of the header.
+
 Mon Jun 18 21:41:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* matcher/branchpostlist.h: Add missed copyright statement.
